# zlefsdc

./: .gitignore  README.md  meson.build  meson_options.txt
core/: meson.build  zlefsdc-cover.c  zlefsdc-cover.h  zlefsdc-player.c  zlefsdc-player.h  zlefsdc-prefs.c  zlefsdc-prefs.h  zlefsdc-settings.c  zlefsdc-settings.h  zlefsdc-widget.c  zlefsdc-widget.h  zlefsdc.h
hosts/standalone/: meson.build  zlefsdc-standalone.c
hosts/xfce/: meson.build  zlefsdc-xfce.c  zlefsdc.desktop
landing/: Dockerfile  docker-compose.yml  server.js
landing/public/: index.html
landing/public/css/: landing.css
landing/public/js/: i18n.js
packaging/: build-deb.sh
packaging/arch/: PKGBUILD
po/: POTFILES.in  fr.po  zlefsdc.pot
test/: examples.sh  grab.py  layouts.sh  mock-mpris.py  player-probe.c  shoot.sh
